# GPT-from-scratch

./: .gitignore  LICENCE.MD  README.md  changes.txt  makefile  pyproject.toml
src/: __init__.py  config.py  dataset.py  inference.py  main.py  model.py  text_generation.py  train.py  utils.py
src/conf/: __init__.py  config.py  config.yaml  model.yaml
src/conf/dataset/: dataset_gpt2_small.yaml  dataset_laptop.yaml  shakespeare.yaml
src/conf/model/: gpt_small.yaml  model_gpt2_small.yaml  model_laptop.yaml  model_very_small.yaml
src/dataset/: __init__.py  dataset.py
src/metrics/: metrics.py
src/model/: __init__.py  gpt.py  model.py
src/model/blocks/: __init__.py  feed_forward.py  layer_norm.py  mha.py  transformer.py
src/outputs/2025-12-18/14-46-01/.hydra/: config.yaml  hydra.yaml
src/train/: __init__.py  train.py  trainer.py
src/utils/: __init__.py  utils.py
src/utils/checkpoint/: load_checkpoint.py  save_checkpoint.py
src/utils/optimizer/: lr.py
src/utils/plotting/: loss_plotting.py  lr_plotting.py
src/utils/text_generation/: generate.py
src/utils/tiny_stories/: load_tiny_stories.py
