[project]
name = "progelisllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.14.9",
    "tiktoken>=0.12.0",
    "requests >= 2.31.0, < 3.0.0",
    "hydra-core>=1.3.2",
    "tqdm>=4.67.1",
    "torch",
    "torchvision",
    "torchaudio",
    "pathlib>=1.0.1",
    "matplotlib>=3.10.8",
    "datasets>=4.4.2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
